[ add ] 課程介紹 modal

--- a/app/course.html
+++ b/app/course.html
@@ -18,7 +18,7 @@ current: course
             <h3 class="fw-medium fz-x-large">本月限定課程 - 空中瑜珈</h3>
             <p class="mb-4">
               <span class="text-secondary me-2">授課老師：Carol Tang</span>
-              <span class="rounded-pill py-1 px-4 bg-primary text-white">60 min</span>
+              <span class="rounded-pill py-1 px-4 bg-primary text-white fw-light">60 min</span>
             </p>
             <p class="mb-4">使用掛布懸掛在半空，進行哈達瑜珈體位法練習<br>藉由地心引力的重力原理<br>鍛鍊核心肌群，舒緩脊椎壓力<br>訓練身體協調性，深層放鬆身體<br>課堂裡老師會視同學狀況安排教導倒立動作<br>對於不敢嘗試倒立的同學來說<br>藉由掛布的支持與保護<br>加上老師細心指導，讓同學能更快掌握</p>
             <a href="" class="btn btn-secondary btn-lg text-white">立即預約</a>
@@ -62,15 +62,17 @@ current: course
           <ul class="list-unstyled row">
             <li class="col-md-6 col-lg-7 mb-75 mb-md-11 mb-lg-75">
               <figure class="position-relative">
-                <img
-                  src="https://images.unsplash.com/flagged/photo-1573556291531-a5d957d7e4e7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1350&q=80"
-                  alt="基礎 Basic" class="img img__course rounded-4">
+                <a type="button" class="stretched-link d-block" data-bs-toggle="modal" data-bs-target="#courseDetail">                 
+                  <img
+                    src="https://images.unsplash.com/flagged/photo-1573556291531-a5d957d7e4e7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1350&q=80"
+                    alt="基礎 Basic" class="img img__course rounded-4">
+                </a>
                 <figcaption
-                  class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
+                  class="text-white p-6 p-md-4 p-lg-6 position-absolute bottom-0 start-0 w-100">
                   <h3 class="fz-x-large fw-medium">基礎 Basic</h3>
                   <p>授課老師：Carol Tang</p>
                 </figcaption>
-                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white">60 min</span>
+                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white fw-light">60 min</span>
               </figure>
             </li>
             <li class="col-md-6 col-lg-5 mb-75">
@@ -79,11 +81,11 @@ current: course
                   src="https://images.unsplash.com/photo-1574454941059-9408c4d3f268?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1350&q=80"
                   alt="艾揚格 Iyengar" class="img img__course rounded-4">
                 <figcaption
-                  class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
+                  class="text-white p-6 p-md-4 p-lg-6 position-absolute bottom-0 start-0 w-100">
                   <h3 class="fz-x-large fw-medium">艾揚格 Iyengar</h3>
                   <p>授課老師：Kanae</p>
                 </figcaption>
-                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white">60 min</span>
+                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white fw-light">60 min</span>
               </figure>
             </li>
             <li class="col-md-6 col-lg-5 mb-75">
@@ -92,11 +94,11 @@ current: course
                   src="https://images.unsplash.com/photo-1611077094726-11cf1f992009?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
                   alt="哈達 Hatha" class="img img__course rounded-4">
                 <figcaption
-                  class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
+                  class="text-white p-6 p-md-4 p-lg-6 position-absolute bottom-0 start-0 w-100">
                   <h3 class="fz-x-large fw-medium">哈達 Hatha</h3>
                   <p>授課老師：Kuzuha</p>
                 </figcaption>
-                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white">60 min</span>
+                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white fw-light">60 min</span>
               </figure>
             </li>
             <li class="col-md-6 col-lg-7 mb-75 mb-md-11 mb-lg-75">
@@ -105,11 +107,11 @@ current: course
                   src="https://images.unsplash.com/photo-1601568870191-8c417f7e0077?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=668&q=80"
                   alt="寰宇 Universal" class="img img__course rounded-4">
                 <figcaption
-                  class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
+                  class="text-white p-6 p-md-4 p-lg-6 position-absolute bottom-0 start-0 w-100">
                   <h3 class="fz-x-large fw-medium">寰宇 Universal</h3>
                   <p>授課老師：Kuzuha</p>
                 </figcaption>
-                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white">60 min</span>
+                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white fw-light">60 min</span>
               </figure>
             </li>
             <li class="col-md-6 col-lg-7 mb-75 mb-md-11 mb-lg-75">
@@ -118,11 +120,11 @@ current: course
                   src="https://images.unsplash.com/photo-1573462239448-06b5cde9df64?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1318&q=80"
                   alt="雙人飛行" class="img img__course rounded-4">
                 <figcaption
-                  class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
+                  class="text-white p-6 p-md-4 p-lg-6 position-absolute bottom-0 start-0 w-100">
                   <h3 class="fz-x-large fw-medium">雙人飛行</h3>
                   <p>授課老師：Kuzuha、Kanae</p>
                 </figcaption>
-                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white">60 min</span>
+                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white fw-light">60 min</span>
               </figure>
             </li>
             <li class="col-md-6 col-lg-5 mb-75">
@@ -131,11 +133,11 @@ current: course
                   src="https://images.unsplash.com/photo-1554245064-3ab88761ac5d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80"
                   alt="阿斯坦加 Ashtanga" class="img img__course rounded-4">
                 <figcaption
-                  class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
+                  class="text-white p-6 p-md-4 p-lg-6 position-absolute bottom-0 start-0 w-100">
                   <h3 class="fz-x-large fw-medium">阿斯坦加 Ashtanga</h3>
                   <p>授課老師：Kanae</p>
                 </figcaption>
-                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white">60 min</span>
+                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white fw-light">60 min</span>
               </figure>
             </li>
             <li class="col-md-6 col-lg-5 mb-75 mb-md-0">
@@ -144,11 +146,11 @@ current: course
                   src="https://images.unsplash.com/photo-1601568870227-099504d72c3c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80"
                   alt="陰陽 Yin Yang" class="img img__course rounded-4">
                 <figcaption
-                  class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
+                  class="text-white p-6 p-md-4 p-lg-6 position-absolute bottom-0 start-0 w-100">
                   <h3 class="fz-x-large fw-medium">陰陽 Yin Yang</h3>
                   <p>授課老師：Asa Chen</p>
                 </figcaption>
-                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white">60 min</span>
+                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white fw-light">60 min</span>
               </figure>
             </li>
             <li class="col-md-6 col-lg-7">
@@ -157,11 +159,11 @@ current: course
                   src="https://images.unsplash.com/photo-1575052814086-f385e2e2ad1b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1350&q=80"
                   alt="香氛 Aroma Yoga" class="img img__course rounded-4">
                 <figcaption
-                  class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
+                  class="text-white p-6 p-md-4 p-lg-6 position-absolute bottom-0 start-0 w-100">
                   <h3 class="fz-x-large fw-medium">香氛 Aroma Yoga</h3>
                   <p>授課老師：Asa Chen</p>
                 </figcaption>
-                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white">60 min</span>
+                <span class="ms-6 rounded-pill py-1 px-4 bg-secondary position-absolute top-0 start-0 translate-middle-y text-white fw-light">60 min</span>
               </figure>
             </li>
           </ul>
@@ -244,4 +246,33 @@ current: course
       </li>
     </ul>
   </section>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="courseDetail" tabindex="-1" aria-labelledby="courseDetail" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content border-0 rounded-4">
+      <div class="modal-body bg-secondary text-white px-4 px-md-6 px-14 py-8 py-md-16 rounded-4">
+        <div class="d-flex">
+          <button type="button" class="btn-close ms-auto" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="row">
+          <div class="col-md-6 mb-2 mb-md-0 d-flex justify-content-center">
+            <img src="https://images.unsplash.com/photo-1540206276207-3af25c08abc4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=668&q=80" alt="空中瑜珈" class="img img__course__detail rounded-4"> 
+          </div>
+          <div class="col-md-6 d-flex align-items-center">
+            <div>
+              <h3 class="fw-medium fz-x-large">基礎 Basic</h3>
+              <p class="mb-4">
+                <span class="me-2">授課老師：Carol Tang</span>
+                <span class="rounded-pill py-1 px-4 bg-primary text-white fw-light">60 min</span>
+              </p>
+              <p class="mb-4">使用掛布懸掛在半空，進行哈達瑜珈體位法練習<br>藉由地心引力的重力原理<br>鍛鍊核心肌群，舒緩脊椎壓力<br>訓練身體協調性，深層放鬆身體<br>課堂裡老師會視同學狀況安排教導倒立動作<br>對於不敢嘗試倒立的同學來說<br>藉由掛布的支持與保護<br>加上老師細心指導，讓同學能更快掌握</p>
+              <a href="reservation.html" class="btn btn-light btn-lg text-primary">立即預約</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
