--- a/app/index.html
+++ b/app/index.html
@@ -18,8 +18,8 @@ current: index
         </h2>
         <p class="fz-larger mb-4">多給自己一點時間享受靜謐，傾聽內心的聲音。</p>
         <div class="d-flex">
-          <a href="#" class="btn btn-light btn-lg text-info me-2 d-block">立即預約</a>
-          <a href="#" class="btn btn-secondary btn-lg text-light d-block">課程介紹</a>
+          <a href="reservation.html" class="btn btn-light btn-lg text-info me-2 d-block">立即預約</a>
+          <a href="course.html" class="btn btn-secondary btn-lg text-light d-block">課程介紹</a>
         </div>
       </div>
     </div>
@@ -112,7 +112,7 @@ current: index
         <p class="text-secondary fz-large mb-4 mb-lg-6">
           我們都渴望平靜安穩的生活，擁有一處能夠靜心的角落，安撫每天繁雜忙碌的心。
         </p>
-        <a href="" class="btn btn-link px-0">
+        <a href="surroundings.html" class="btn btn-link px-0">
           <div class="d-flex align-items-center">
             環境介紹
             <span class="material-icons-outlined ms-2">trending_flat</span>
@@ -146,7 +146,7 @@ current: index
           <p class="text-secondary fz-large mb-4 mb-lg-6">
             教師帶領多元課程，釋放壓力，與身心常見的緊繃不適溫柔和解。
           </p>
-          <a href="" class="btn btn-link px-0">
+          <a href="course.html" class="btn btn-link px-0">
             <div class="d-flex align-items-center">
               課程介紹
               <span class="material-icons-outlined ms-2">trending_flat</span>
@@ -190,7 +190,7 @@ current: index
               <h3 class="fz-large mb-1 text-center">首次體驗</h3>
               <p class="text-secondary mb-2 text-center">NT $450 / 次</p>
               <p class="mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</p>
-              <a href="" class="btn btn-secondary d-block w-100 text-white">選擇課程</a>
+              <a href="reservation.html" class="btn btn-secondary stretched-link d-block w-100 text-white">選擇課程</a>
             </div>
           </div>
         </div>
@@ -207,7 +207,7 @@ current: index
               <h3 class="fz-large mb-1 text-center">短期體驗</h3>
               <p class="text-secondary mb-2 text-center">NT $1800 / 月</p>
               <p class="mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</p>
-              <a href="" class="btn btn-secondary d-block w-100 text-white">選擇課程</a>
+              <a href="reservation.html" class="btn btn-secondary stretched-link d-block w-100 text-white">選擇課程</a>
             </div>
           </div>
         </div>
@@ -224,7 +224,7 @@ current: index
               <h3 class="fz-large mb-1 text-center">長期體驗</h3>
               <p class="text-secondary mb-2 text-center">NT $5600 / 月</p>
               <p class="mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</p>
-              <a href="" class="btn btn-secondary d-block w-100 text-white">選擇課程</a>
+              <a href="reservation.html" class="btn btn-secondary stretched-link d-block w-100 text-white">選擇課程</a>
             </div>
           </div>
         </div>
@@ -357,7 +357,7 @@ current: index
     </ul>
     <div class="d-flex d-md-none mb-1">
       <button type="button" class="icon--reverseX btn btn-link px-0 me-auto">
-        <span class="material-icons-outlined fz-huge">trending_flat</span>
+        <span class="material-icons-outlined fz-huge opacity-50">trending_flat</span>
       </button>
       <button type="button" class="btn btn-link px-0">
         <span class="material-icons-outlined fz-huge">trending_flat</span>
