--- a/app/reservation.html
+++ b/app/reservation.html
@@ -11,9 +11,9 @@ current: reservation
     <h2 class="text-primary fz-x-large text-center mb-6 mb-md-4">立即預約</h2>
     <div class="row justify-content-center mb-8">
       <div class="col-md-6 col-lg-5 d-flex justify-content-between mx-auto">
-        <input type="button" value="選擇方案" class="btn btn-primary rounded-4 text-white px-3 px-lg-6 px-xl-10">
-        <input type="button" value="填寫資料" class="btn btn-light rounded-4 text-primary px-3 px-lg-6 px-xl-10">
-        <input type="button" value="完成預約" class="btn btn-light rounded-4 text-primary px-3 px-lg-6 px-xl-10">
+        <p class="bg-primary rounded-4 text-white py-3 px-3 px-lg-6 px-xl-10 d-flex align-items-center">選擇方案</p>
+        <p class="bg-light rounded-4 text-primary py-3 px-3 px-lg-6 px-xl-10 d-flex align-items-center">填寫資料</p>
+        <p class="bg-light rounded-4 text-primary py-3 px-3 px-lg-6 px-xl-10 d-flex align-items-center">完成預約</p>
       </div>
     </div>
     <ul class="list-unstyled row">
