[ edit ] 修正按鈕文字顏色

--- a/app/contact.html
+++ b/app/contact.html
@@ -37,7 +37,7 @@ current: contact
          </div>
          <textarea name="" id="" cols="30" rows="10" class="form-control mb-6"></textarea>
          <div class="d-flex">
-           <input type="button" value="送出" class="btn btn-secondary text-white ms-auto">
+           <input type="button" value="送出" class="btn btn-secondary ms-auto">
          </div>
        </form>
      </div>
