--- a/app/reservation-2.html
+++ b/app/reservation-2.html
@@ -131,7 +131,7 @@ current: reservation-2
             </li>
             <!-- 送出完成後跳轉至"完成預約" -->
             <li>
-              <a href="reservation-done.html" class="btn btn-secondary fz-large text-white d-block w-100">送出</a>
+              <a href="reservation-done.html" class="btn btn-secondary fz-large d-block w-100">送出</a>
             </li>
           </ul>
         </form>
