--- a/app/reservation.html
+++ b/app/reservation.html
@@ -30,7 +30,7 @@ current: reservation
                 <h3 class="fz-large mb-1 text-center">首次體驗</h3>
                 <p class="text-secondary mb-2 text-center">NT $450 / 次</p>
                 <p class="mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</p>
-                <a type="button" class="btn btn-secondary d-block w-100 text-white stretched-link">選擇課程</a>
+                <a type="button" class="btn btn-secondary d-block w-100 stretched-link">選擇課程</a>
               </div>
             </div>
           </div>
@@ -50,7 +50,7 @@ current: reservation
                 <h3 class="fz-large mb-1 text-center">短期體驗</h3>
                 <p class="text-secondary mb-2 text-center">NT $1800 / 月</p>
                 <p class="mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</p>
-                <a type="button" class="btn btn-secondary d-block w-100 text-white stretched-link">選擇課程</a>
+                <a type="button" class="btn btn-secondary d-block w-100 stretched-link">選擇課程</a>
               </div>
             </div>
           </div>
@@ -69,7 +69,7 @@ current: reservation
                 <h3 class="fz-large mb-1 text-center">長期體驗</h3>
                 <p class="text-secondary mb-2 text-center">NT $5600 / 月</p>
                 <p class="mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</p>
-                <a type="button" class="btn btn-secondary d-block w-100 text-white stretched-link">選擇課程</a>
+                <a type="button" class="btn btn-secondary d-block w-100 stretched-link">選擇課程</a>
               </div>
             </div>
           </div>
@@ -153,7 +153,7 @@ current: reservation
         </ol>
         <div class="row">
           <div class="col-6 mx-auto">
-            <a href="reservation-2.html" class="btn btn-secondary text-white fz-large d-block w-100">繼續預約</a>
+            <a href="reservation-2.html" class="btn btn-secondary fz-large d-block w-100">繼續預約</a>
           </div>
         </div>
       </div>
