--- a/app/course.html
+++ b/app/course.html
@@ -18,10 +18,10 @@ current: course
             <h3 class="fw-medium fz-x-large">本月限定課程 - 空中瑜珈</h3>
             <p class="mb-4">
               <span class="text-secondary me-2">授課老師：Carol Tang</span>
-              <span class="rounded-pill py-1 px-4 bg-primary text-white fw-light">60 min</span>
+              <span class="rounded-pill py-1 px-4 bg-primary fw-light">60 min</span>
             </p>
             <p class="mb-4">使用掛布懸掛在半空，進行哈達瑜珈體位法練習<br>藉由地心引力的重力原理<br>鍛鍊核心肌群，舒緩脊椎壓力<br>訓練身體協調性，深層放鬆身體<br>課堂裡老師會視同學狀況安排教導倒立動作<br>對於不敢嘗試倒立的同學來說<br>藉由掛布的支持與保護<br>加上老師細心指導，讓同學能更快掌握</p>
-            <a href="reservation.html" class="btn btn-secondary btn-lg text-white">立即預約</a>
+            <a href="reservation.html" class="btn btn-secondary btn-lg">立即預約</a>
           </div>
         </div>
       </div>
@@ -35,7 +35,7 @@ current: course
         <div class="col-md-6 d-flex">
           <div class="input-group me-2">
             <input type="text" class="form-control" placeholder="請輸入要搜尋的課程">
-            <button class="btn btn-primary text-white" type="button">
+            <button class="btn btn-primary" type="button">
               搜尋
             </button>
           </div>
