--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@ current: index
         <p class="fz-larger mb-4">多給自己一點時間享受靜謐，傾聽內心的聲音。</p>
         <div class="d-flex">
           <a href="reservation.html" class="btn btn-light btn-lg text-info me-2 d-block">立即預約</a>
-          <a href="course.html" class="btn btn-secondary btn-lg text-light d-block">課程介紹</a>
+          <a href="course.html" class="btn btn-secondary btn-lg d-block">課程介紹</a>
         </div>
       </div>
     </div>
@@ -190,7 +190,7 @@ current: index
               <h3 class="fz-large mb-1 text-center">首次體驗</h3>
               <p class="text-secondary mb-2 text-center">NT $450 / 次</p>
               <p class="mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</p>
-              <a href="reservation.html" class="btn btn-secondary stretched-link d-block w-100 text-white">選擇課程</a>
+              <a href="reservation.html" class="btn btn-secondary stretched-link d-block w-100">選擇課程</a>
             </div>
           </div>
         </div>
@@ -207,7 +207,7 @@ current: index
               <h3 class="fz-large mb-1 text-center">短期體驗</h3>
               <p class="text-secondary mb-2 text-center">NT $1800 / 月</p>
               <p class="mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</p>
-              <a href="reservation.html" class="btn btn-secondary stretched-link d-block w-100 text-white">選擇課程</a>
+              <a href="reservation.html" class="btn btn-secondary stretched-link d-block w-100">選擇課程</a>
             </div>
           </div>
         </div>
@@ -224,7 +224,7 @@ current: index
               <h3 class="fz-large mb-1 text-center">長期體驗</h3>
               <p class="text-secondary mb-2 text-center">NT $5600 / 月</p>
               <p class="mb-10 mb-md-6 mb-lg-10">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</p>
-              <a href="reservation.html" class="btn btn-secondary stretched-link d-block w-100 text-white">選擇課程</a>
+              <a href="reservation.html" class="btn btn-secondary stretched-link d-block w-100">選擇課程</a>
             </div>
           </div>
         </div>
