--- a/app/reservation-done.html
+++ b/app/reservation-done.html
@@ -66,7 +66,7 @@ current: reservation-done
           <div class="col-md-8 mx-auto">
             <h3 class="text-center fz-large fw-normal mb-2">上課注意事項</h3>
             <p class="mb-8">第一次上課請提前 10-15 分鐘至櫃檯報到，請攜帶毛巾、水 .穿著運動服、乾淨室內運動鞋。 如欲更改體驗時間請提前通知我們喔！</p>
-            <a href="index.html" class="btn btn-secondary text-white d-block w-100">返回首頁</a>
+            <a href="index.html" class="btn btn-secondary d-block w-100">返回首頁</a>
           </div>
         </div>
       </div>
