[ edit ] 修正各頁 RWD

--- a/app/reservation-2.html
+++ b/app/reservation-2.html
@@ -21,7 +21,7 @@ current: reservation-2
       <span class="fz-large text-secondary">首次體驗課程-基礎</span>
     </p>
     <div class="row">
-      <div class="col-md-4 mx-auto">
+      <div class="col-md-6 col-lg-4 mx-auto">
         <form action="">
           <ul class="list-unstyled">
             <!-- 1. 是否接觸過瑜珈? -->
