--- a/app/course.html
+++ b/app/course.html
@@ -9,7 +9,7 @@ current: course
   <section class="container mb-12 mb-md-18 mb-lg-16">
     <h2 class="fw-normal fz-x-large text-peimary text-center mb-6 mb-md-8">課程介紹</h2>
     <div class="row">
-      <div class="col-md-10 mx-auto">
+      <div class="col-lg-10 mx-auto">
         <div class="row">
           <div class="col-md-6 mb-2 mb-md-0">
             <img src="https://images.unsplash.com/photo-1540206276207-3af25c08abc4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=668&q=80" alt="空中瑜珈" class="img img__course__primary rounded-4"> 
@@ -18,7 +18,7 @@ current: course
             <h3 class="fw-medium fz-x-large">本月限定課程 - 空中瑜珈</h3>
             <p class="mb-4">
               <span class="text-secondary me-2">授課老師：Carol Tang</span>
-              <span class="rounded-pill py-1 px-4 bg-primary fw-light">60 min</span>
+              <span class="rounded-pill py-1 px-4 bg-primary text-white fw-light">60 min</span>
             </p>
             <p class="mb-4">使用掛布懸掛在半空，進行哈達瑜珈體位法練習<br>藉由地心引力的重力原理<br>鍛鍊核心肌群，舒緩脊椎壓力<br>訓練身體協調性，深層放鬆身體<br>課堂裡老師會視同學狀況安排教導倒立動作<br>對於不敢嘗試倒立的同學來說<br>藉由掛布的支持與保護<br>加上老師細心指導，讓同學能更快掌握</p>
             <a href="reservation.html" class="btn btn-secondary btn-lg">立即預約</a>
@@ -32,7 +32,7 @@ current: course
   <section class="bg-secondary mb-8 mb-md-10">
     <div class="container py-5">
       <div class="row">
-        <div class="col-md-6 d-flex">
+        <div class="col-md-7 d-flex">
           <div class="input-group me-2">
             <input type="text" class="form-control" placeholder="請輸入要搜尋的課程">
             <button class="btn btn-primary" type="button">
@@ -192,8 +192,8 @@ current: course
   <!-- 師資介紹 -->
   <section class="container">
     <h2 class="fw-medium fz-x-large text-peimary text-center mb-20">師資介紹</h2>
-    <ul class="list-unstyled row flex-nowrap text-white">
-      <li class="col-4">
+    <ul class="list-unstyled row flex-md-nowrap text-white">
+      <li class="col-md-6 col-lg-4 mb-18 mb-md-0">
         <div class="pt-14 px-6 pb-18 bg-secondary rounded-4 position-relative h-100">
           <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-1.png?raw=true" alt="Carol Tang" class="icon icon-huger position-absolute top-0 start-50 translate-middle border border-primary border-3">
           <h3 class="fw-normal fz-large text-center mb-1">Carol Tang 老師</h3>
@@ -206,7 +206,7 @@ current: course
           </ul>
         </div>
       </li>
-      <li class="col-4">
+      <li class="col-md-6 col-lg-4 mb-18 mb-md-0">
         <div class="pt-14 px-6 pb-18 bg-primary rounded-4 position-relative">
           <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-2.png?raw=true" alt="Kanae" class="icon icon-huger position-absolute top-0 start-50 translate-middle border border-secondary border-3">
           <h3 class="fw-normal fz-large text-center mb-1">Kanae 老師</h3>
@@ -219,7 +219,7 @@ current: course
           </ul>
         </div>
       </li>
-      <li class="col-4">
+      <li class="col-md-6 col-lg-4 mb-18 mb-md-0">
         <div class="pt-14 px-6 pb-18 bg-secondary rounded-4 position-relative h-100">
           <img src="../assets/images/Ellipse38.png" alt="Kuzuha" class="icon icon-huger position-absolute top-0 start-50 translate-middle">
           <h3 class="fw-normal fz-large text-center mb-1">Kuzuha 老師</h3>
@@ -232,7 +232,7 @@ current: course
           </ul>
         </div>
       </li>
-      <li class="col-4">
+      <li class="col-md-6 col-lg-4">
         <div class="pt-14 px-6 pb-18 bg-primary rounded-4 position-relative h-100">
           <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-3.png?raw=true" alt="Asa Ifrit" class="icon icon-huger position-absolute top-0 start-50 translate-middle border border-secondary border-3">
           <h3 class="fw-normal fz-large text-center mb-1">Asa Ifrit 老師</h3>
@@ -252,7 +252,7 @@ current: course
 <div class="modal fade" id="courseDetail" tabindex="-1" aria-labelledby="courseDetail" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg">
     <div class="modal-content border-0 rounded-4">
-      <div class="modal-body bg-secondary text-white px-4 px-md-6 px-14 py-8 py-md-16 rounded-4">
+      <div class="modal-body bg-secondary text-white px-4 px-md-6 px-lg-14 py-8 py-md-16 rounded-4">
         <div class="d-flex">
           <button type="button" class="btn-close ms-auto" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
