--- a/app/index.html
+++ b/app/index.html
@@ -140,7 +140,7 @@ current: index
 <section class="container-fluid py-8 py-lg-16 bg-light">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-lg-5 d-flex justify-content-center align-items-center">
+      <div class="col-md-6 col-lg-5 d-flex justify-content-center align-items-center mb-4 mb-md-0">
         <div class="ms-lg-26">
           <h2 class="fw-medium fz-x-large mb-1">精心設計、課程多元</h2>
           <p class="text-secondary fz-large mb-4 mb-lg-6">
@@ -155,7 +155,7 @@ current: index
         </div>
       </div>
       <div class="col-md-6">
-        <ul class="swiper list-unstyled row flex-lg-nowrap">
+        <ul class="list-unstyled row flex-lg-nowrap">
           <li class="col-6 col-lg-8 mb-4 md-md-6">
             <img src="https://images.unsplash.com/flagged/photo-1573556291531-a5d957d7e4e7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80" alt="課程一" class="img img__course__index rounded-4">
           </li>
