[ edit ] 修正首頁師資介紹與課表下方須知

--- a/app/index.html
+++ b/app/index.html
@@ -74,27 +74,33 @@ current: index
           強力師資，經歷豐富，協會認證。<br>
           運用引導式教學，針對不同需求的人制定專屬課程。
         </p>
-        <ul class="list-unstyled">
-          <li class="d-flex align-items-center p-4 py-md-10 ps-md-12 bg-white rounded-4 ms-md-20 ms-lg-n20">
-            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-1.png?raw=true" alt="Carol Tang" class="icon icon-x-large icon-md-huger me-4 me-md-5">
-            <div>
-              <h3 class="fz-large mb-1">Carol Tang 老師</h3>
-              <p>教學經歷 10 年</p>
-              <p>瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。</p>
+        <ul class="list-unstyled row">
+          <li class="col-md-11 col-lg-12 offset-md-1 offset-lg-0">
+            <div class="d-flex align-items-center p-4 py-md-10 ps-md-12 bg-white rounded-4 ms-lg-n20">
+              <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-1.png?raw=true" alt="Carol Tang" class="icon icon-x-large icon-md-huger me-4 me-md-5">
+              <div>
+                <h3 class="fz-large mb-1">Carol Tang 老師</h3>
+                <p>教學經歷 10 年</p>
+                <p>瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。</p>
+              </div>
             </div>
           </li>
-          <li class="d-flex align-items-center p-4 py-md-6 ps-md-8 my-4 bg-white rounded-4 ms-md-43 ms-lg-0">
-            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-2.png?raw=true" alt="Kanae" class="icon icon-x-large icon-md-huge me-4 me-md-5">
-            <div>
-              <h3 class="fz-large mb-1">Kanae 老師</h3>
-              <p>教學經歷 10 年</p>
+          <li class="col-md-9 col-lg-12 offset-md-3 offset-lg-0">
+            <div class="d-flex align-items-center p-4 py-md-6 ps-md-8 my-4 bg-white rounded-4">
+              <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-2.png?raw=true" alt="Kanae" class="icon icon-x-large icon-md-huge me-4 me-md-5">
+              <div>
+                <h3 class="fz-large mb-1">Kanae 老師</h3>
+                <p>教學經歷 10 年</p>
+              </div>
             </div>
           </li>
-          <li class="d-flex align-items-center p-4 py-md-6 ps-md-8 bg-white rounded-4 ms-md-43 ms-lg-0">
-            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-3.png?raw=true" alt="Asa Ifrit" class="icon icon-x-large icon-md-huge me-4 me-md-5">
-            <div>
-              <h3 class="fz-large mb-1">Asa Ifrit 老師</h3>
-              <p>教學經歷 10 年</p>
+          <li class="col-md-9 col-lg-12 offset-md-3 offset-lg-0">
+            <div class="d-flex align-items-center p-4 py-md-6 ps-md-8 bg-white rounded-4">
+              <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-3.png?raw=true" alt="Asa Ifrit" class="icon icon-x-large icon-md-huge me-4 me-md-5">
+              <div>
+                <h3 class="fz-large mb-1">Asa Ifrit 老師</h3>
+                <p>教學經歷 10 年</p>
+              </div>
             </div>
           </li>
         </ul>
