--- a/app/curriculum.html
+++ b/app/curriculum.html
@@ -115,35 +115,31 @@ current: curriculum
 
   <section>
     <h2 class="fw-medium fz-x-large text-peimary text-center mb-6 mb-md-8">上課須知</h2>
-    <div class="row">
-      <div class="col-md-10 col-lg-7 mx-auto">
-        <ul class="list-unstyled">
-          <li class="mb-4 mb-md-6 ms-lg-n21 me-lg-21">
-            <p class="d-flex align-items-center">
-              <span class="text-primary fw-bold fz-xx-large me-6">1.</span>
-              <span class="py-4 px-4 px-md-6 border border-secondary rounded-4 d-block w-100">空中瑜珈、香氛開放 2 天前電話預約上課。</span>
-            </p>
-          </li>
-          <li class="mb-4 mb-md-6 ms-lg-24 me-lg-n21">
-            <p class="d-flex align-items-center">
-              <span class="text-primary fw-bold fz-xx-large me-6">2.</span>
-              <span class="py-4 px-4 px-md-6 border border-secondary rounded-4 w-100 bg-secondary text-white">如果有特殊體質、特殊狀況，請主動告知該堂教師。</span>
-            </p>
-          </li>
-          <li class="mb-4 mb-md-6 ms-lg-n21 me-lg-21">
-            <p class="d-flex align-items-center">
-              <span class="text-primary fw-bold fz-xx-large me-6">3.</span>
-              <span class="py-4 px-4 px-md-6 border border-secondary rounded-4 w-100">取消預約或時間異動請於預約日前一天晚間 21:00 前告知。</span>
-            </p>
-          </li>
-          <li class="mb-4 mb-md-6 ms-lg-24 me-lg-n21">
-            <p class="d-flex align-items-center">
-              <span class="text-primary fw-bold fz-xx-large me-6">4.</span>
-              <span class="py-4 px-4 px-md-6 border border-secondary rounded-4 w-100 bg-secondary text-white">運動過程中若感到任何不適，請馬上停止且與老師商量討論。</span>
-            </p>
-          </li>
-        </ul>
-      </div>
-    </div>
+    <ul class="list-unstyled row justify-content-center justify-content-lg-start">
+      <li class="col-md-7 offset-lg-2 mb-4 mb-md-6">
+        <p class="d-flex align-items-center">
+          <span class="text-primary fw-bold fz-xx-large me-6">1.</span>
+          <span class="py-4 px-4 px-md-6 border border-secondary rounded-4 d-block w-100">空中瑜珈、香氛開放 2 天前電話預約上課。</span>
+        </p>
+      </li>
+      <li class="col-md-7 offset-lg-3 mb-4 mb-md-6">
+        <p class="d-flex align-items-center">
+          <span class="text-primary fw-bold fz-xx-large me-6">2.</span>
+          <span class="py-4 px-4 px-md-6 border border-secondary rounded-4 w-100 bg-secondary text-white">如果有特殊體質、特殊狀況，請主動告知該堂教師。</span>
+        </p>
+      </li>
+      <li class="col-md-7 offset-lg-2 mb-4 mb-md-6">
+        <p class="d-flex align-items-center">
+          <span class="text-primary fw-bold fz-xx-large me-6">3.</span>
+          <span class="py-4 px-4 px-md-6 border border-secondary rounded-4 w-100">取消預約或時間異動請於預約日前一天晚間 21:00 前告知。</span>
+        </p>
+      </li>
+      <li class="col-md-7 offset-lg-3 mb-4 mb-md-6">
+        <p class="d-flex align-items-center">
+          <span class="text-primary fw-bold fz-xx-large me-6">4.</span>
+          <span class="py-4 px-4 px-md-6 border border-secondary rounded-4 w-100 bg-secondary text-white">運動過程中若感到任何不適，請馬上停止且與老師商量討論。</span>
+        </p>
+      </li>
+    </ul>
   </section>
 </div>
