--- a/app/course.html
+++ b/app/course.html
@@ -191,60 +191,126 @@ current: course
 
   <!-- 師資介紹 -->
   <section class="container">
-    <h2 class="fw-medium fz-x-large text-peimary text-center mb-20">師資介紹</h2>
-    <ul class="list-unstyled row flex-md-nowrap text-white">
-      <li class="col-md-6 col-lg-4 mb-18 mb-md-0">
-        <div class="pt-14 px-6 pb-18 bg-secondary rounded-4 position-relative h-100">
-          <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-1.png?raw=true" alt="Carol Tang" class="icon icon-huger position-absolute top-0 start-50 translate-middle border border-primary border-3">
-          <h3 class="fw-normal fz-large text-center mb-1">Carol Tang 老師</h3>
-          <p class="text-center mb-4">教學經歷 10 年</p>
-          <p class="fw-light mb-4">“因為瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。 我希望能跟學生們分享瑜珈的好，讓大 家能藉由瑜珈看見自己的內在與潛能， 並將瑜珈自然的融入自己的生活中。”</p>
-          <ul class="list-unstyled">
-            <li class="mb-1">・協會認證艾揚格瑜珈老師</li>
-            <li class="mb-1">・2010 年完成四年的艾揚格師資培訓</li>
-            <li>・2020 取得艾揚格瑜珈高階認證</li>
-          </ul>
-        </div>
-      </li>
-      <li class="col-md-6 col-lg-4 mb-18 mb-md-0">
-        <div class="pt-14 px-6 pb-18 bg-primary rounded-4 position-relative">
-          <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-2.png?raw=true" alt="Kanae" class="icon icon-huger position-absolute top-0 start-50 translate-middle border border-secondary border-3">
-          <h3 class="fw-normal fz-large text-center mb-1">Kanae 老師</h3>
-          <p class="text-center mb-4">教學經歷 3 年</p>
-          <p class="fw-light mb-4">“希望每個人透過觀察，感受在在進入動作，連接陰與陽，內和外，呼和吸的方式來更了解瑜珈練習的觀點，每個​動作都帶著呼吸和順位，在平衡心理和生理的狀況下以安全和簡化的技巧進入瑜珈姿勢，帶著放鬆的心情，享受瑜珈和生命的喜悅，並樂在其​中。”</p>
-          <ul class="list-unstyled">
-            <li class="mb-1">・美國瑜珈聯盟 RYT200 小時師資認證</li>
-            <li class="mb-1">・自然呼吸瑜珈會館開授倒立研習</li>
-            <li>・簡善琳瑜珈會館開授倒立研習</li>
-          </ul>
-        </div>
-      </li>
-      <li class="col-md-6 col-lg-4 mb-18 mb-md-0">
-        <div class="pt-14 px-6 pb-18 bg-secondary rounded-4 position-relative h-100">
-          <img src="../assets/images/Ellipse38.png" alt="Kuzuha" class="icon icon-huger position-absolute top-0 start-50 translate-middle">
-          <h3 class="fw-normal fz-large text-center mb-1">Kuzuha 老師</h3>
-          <p class="text-center mb-4">教學經歷 3 年</p>
-          <p class="fw-light mb-4">“瑜珈是一種生活態度， 學習平衡不強求，堅持不放棄， 修煉心靈活在當下。”</p>
-          <ul class="list-unstyled">
-            <li class="mb-1">・美國瑜珈聯盟 RYT200 小時師資認證</li>
-            <li class="mb-1">・自然呼吸瑜珈會館開授倒立研習</li>
-            <li>・簡善琳瑜珈會館開授倒立研習</li>
-          </ul>
-        </div>
-      </li>
-      <li class="col-md-6 col-lg-4">
-        <div class="pt-14 px-6 pb-18 bg-primary rounded-4 position-relative h-100">
-          <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-3.png?raw=true" alt="Asa Ifrit" class="icon icon-huger position-absolute top-0 start-50 translate-middle border border-secondary border-3">
-          <h3 class="fw-normal fz-large text-center mb-1">Asa Ifrit 老師</h3>
-          <p class="text-center mb-4">教學經歷 3 年</p>
-          <p class="fw-light mb-4">“帶著懵懂和好奇開始了瑜珈的探索。 追隨印度瑜珈大師 Atui Shri 學習呼吸控制和冥想以及完成瑜珈大師宋光明師資培訓。”</p>
-          <ul class="list-unstyled">
-            <li class="mb-1">・美國瑜珈聯盟 RYT200 小時師資認證</li>
-            <li>・AshtangsTTC50小時認證</li>
-          </ul>
-        </div>
-      </li>
-    </ul>
+    <h2 class="fw-medium fz-x-large text-peimary text-center mb-20 mb-md-0">師資介紹</h2>
+    <div class="teachersSwiper swiper-container d-none d-md-block">
+      <ul class="list-unstyled swiper-wrapper text-white">
+        <li class="swiper-slide mb-18 mb-md-0">
+          <div class="pb-20 position-relative ">
+            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-1.png?raw=true" alt="Carol Tang" class="icon icon-huger position-absolute top-100 start-50 translate-middle border border-primary border-3">
+          </div>
+          <div class="pt-14 px-6 pb-18 bg-secondary rounded-4 h-100">
+            <h3 class="fw-normal fz-large text-center mb-1">Carol Tang 老師</h3>
+            <p class="text-center mb-4">教學經歷 10 年</p>
+            <p class="fw-light mb-4">“因為瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。 我希望能跟學生們分享瑜珈的好，讓大 家能藉由瑜珈看見自己的內在與潛能， 並將瑜珈自然的融入自己的生活中。”</p>
+            <ul class="list-unstyled">
+              <li class="mb-1">・協會認證艾揚格瑜珈老師</li>
+              <li class="mb-1">・2010 年完成四年的艾揚格師資培訓</li>
+              <li>・2020 取得艾揚格瑜珈高階認證</li>
+            </ul>
+          </div>
+        </li>
+        <li class="swiper-slide mb-18 mb-md-0">
+          <div class="pb-20 position-relative">
+            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-2.png?raw=true" alt="Kanae" class="icon icon-huger position-absolute top-100 start-50 translate-middle border border-secondary border-3">
+          </div>
+          <div class="pt-14 px-6 pb-18 bg-primary rounded-4 h-100">
+            <h3 class="fw-normal fz-large text-center mb-1">Kanae 老師</h3>
+            <p class="text-center mb-4">教學經歷 3 年</p>
+            <p class="fw-light mb-4">“希望每個人透過觀察，感受在在進入動作，連接陰與陽，內和外，呼和吸的方式來更了解瑜珈練習的觀點，每個​動作都帶著呼吸和順位，在平衡心理和生理的狀況下以安全和簡化的技巧進入瑜珈姿勢，帶著放鬆的心情，享受瑜珈和生命的喜悅，並樂在其​中。”</p>
+            <ul class="list-unstyled">
+              <li class="mb-1">・美國瑜珈聯盟 RYT200 小時師資認證</li>
+              <li class="mb-1">・自然呼吸瑜珈會館開授倒立研習</li>
+              <li>・簡善琳瑜珈會館開授倒立研習</li>
+            </ul>
+          </div>
+        </li>
+        <li class="swiper-slide mb-18 mb-md-0">
+          <div class="pb-20 position-relative">
+            <img src="../assets/images/Ellipse38.png" alt="Kuzuha" class="icon icon-huger position-absolute top-100 start-50 translate-middle">
+          </div>
+          <div class="pt-14 px-6 pb-18 bg-secondary rounded-4 h-100">
+            <h3 class="fw-normal fz-large text-center mb-1">Kuzuha 老師</h3>
+            <p class="text-center mb-4">教學經歷 3 年</p>
+            <p class="fw-light mb-4">“瑜珈是一種生活態度， 學習平衡不強求，堅持不放棄， 修煉心靈活在當下。”</p>
+            <ul class="list-unstyled">
+              <li class="mb-1">・美國瑜珈聯盟 RYT200 小時師資認證</li>
+              <li class="mb-1">・自然呼吸瑜珈會館開授倒立研習</li>
+              <li>・簡善琳瑜珈會館開授倒立研習</li>
+            </ul>
+          </div>
+        </li>
+        <li class="swiper-slide">
+          <div class="pb-20 position-relative">
+            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-3.png?raw=true" alt="Asa Ifrit" class="icon icon-huger position-absolute top-100 start-50 translate-middle border border-secondary border-3">
+          </div>
+          <div class="pt-14 px-6 pb-18 bg-primary rounded-4 ">
+            <h3 class="fw-normal fz-large text-center mb-1">Asa Ifrit 老師</h3>
+            <p class="text-center mb-4">教學經歷 3 年</p>
+            <p class="fw-light mb-4">“帶著懵懂和好奇開始了瑜珈的探索。 追隨印度瑜珈大師 Atui Shri 學習呼吸控制和冥想以及完成瑜珈大師宋光明師資培訓。”</p>
+            <ul class="list-unstyled">
+              <li class="mb-1">・美國瑜珈聯盟 RYT200 小時師資認證</li>
+              <li>・AshtangsTTC50小時認證</li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    <div class="d-md-none">
+      <ul class="list-unstyled row flex-md-nowrap text-white">
+        <li class="col-md-6 col-lg-4 mb-18 mb-md-0">
+          <div class="pt-14 px-6 pb-18 bg-secondary rounded-4 position-relative h-100">
+            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-1.png?raw=true" alt="Carol Tang" class="icon icon-huger position-absolute top-0 start-50 translate-middle border border-primary border-3">
+            <h3 class="fw-normal fz-large text-center mb-1">Carol Tang 老師</h3>
+            <p class="text-center mb-4">教學經歷 10 年</p>
+            <p class="fw-light mb-4">“因為瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。 我希望能跟學生們分享瑜珈的好，讓大 家能藉由瑜珈看見自己的內在與潛能， 並將瑜珈自然的融入自己的生活中。”</p>
+            <ul class="list-unstyled">
+              <li class="mb-1">・協會認證艾揚格瑜珈老師</li>
+              <li class="mb-1">・2010 年完成四年的艾揚格師資培訓</li>
+              <li>・2020 取得艾揚格瑜珈高階認證</li>
+            </ul>
+          </div>
+        </li>
+        <li class="col-md-6 col-lg-4 mb-18 mb-md-0">
+          <div class="pt-14 px-6 pb-18 bg-primary rounded-4 position-relative">
+            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-2.png?raw=true" alt="Kanae" class="icon icon-huger position-absolute top-0 start-50 translate-middle border border-secondary border-3">
+            <h3 class="fw-normal fz-large text-center mb-1">Kanae 老師</h3>
+            <p class="text-center mb-4">教學經歷 3 年</p>
+            <p class="fw-light mb-4">“希望每個人透過觀察，感受在在進入動作，連接陰與陽，內和外，呼和吸的方式來更了解瑜珈練習的觀點，每個​動作都帶著呼吸和順位，在平衡心理和生理的狀況下以安全和簡化的技巧進入瑜珈姿勢，帶著放鬆的心情，享受瑜珈和生命的喜悅，並樂在其​中。”</p>
+            <ul class="list-unstyled">
+              <li class="mb-1">・美國瑜珈聯盟 RYT200 小時師資認證</li>
+              <li class="mb-1">・自然呼吸瑜珈會館開授倒立研習</li>
+              <li>・簡善琳瑜珈會館開授倒立研習</li>
+            </ul>
+          </div>
+        </li>
+        <li class="col-md-6 col-lg-4 mb-18 mb-md-0">
+          <div class="pt-14 px-6 pb-18 bg-secondary rounded-4 position-relative h-100">
+            <img src="../assets/images/Ellipse38.png" alt="Kuzuha" class="icon icon-huger position-absolute top-0 start-50 translate-middle">
+            <h3 class="fw-normal fz-large text-center mb-1">Kuzuha 老師</h3>
+            <p class="text-center mb-4">教學經歷 3 年</p>
+            <p class="fw-light mb-4">“瑜珈是一種生活態度， 學習平衡不強求，堅持不放棄， 修煉心靈活在當下。”</p>
+            <ul class="list-unstyled">
+              <li class="mb-1">・美國瑜珈聯盟 RYT200 小時師資認證</li>
+              <li class="mb-1">・自然呼吸瑜珈會館開授倒立研習</li>
+              <li>・簡善琳瑜珈會館開授倒立研習</li>
+            </ul>
+          </div>
+        </li>
+        <li class="col-md-6 col-lg-4">
+          <div class="pt-14 px-6 pb-18 bg-primary rounded-4 position-relative h-100">
+            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/teacher-3.png?raw=true" alt="Asa Ifrit" class="icon icon-huger position-absolute top-0 start-50 translate-middle border border-secondary border-3">
+            <h3 class="fw-normal fz-large text-center mb-1">Asa Ifrit 老師</h3>
+            <p class="text-center mb-4">教學經歷 3 年</p>
+            <p class="fw-light mb-4">“帶著懵懂和好奇開始了瑜珈的探索。 追隨印度瑜珈大師 Atui Shri 學習呼吸控制和冥想以及完成瑜珈大師宋光明師資培訓。”</p>
+            <ul class="list-unstyled">
+              <li class="mb-1">・美國瑜珈聯盟 RYT200 小時師資認證</li>
+              <li>・AshtangsTTC50小時認證</li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+    </div>
   </section>
 </div>
 
