--- a/app/reservation-2.html
+++ b/app/reservation-2.html
@@ -98,7 +98,8 @@ current: reservation-2
             <li class="mb-8">
               <h3 class="mb-4 fw-normal fz-medium">4. 上課預約報到日</h3>
               <p class="fz-small mb-2">若還沒有確定的日期，可以等待專員與您聯絡時再做詳細的諮詢哦！</p>
-              <input type="button" value="MM/DD/YYYY" class="btn btn-outline-primary">
+              <!-- <input type="button" value="MM/DD/YYYY" class="btn btn-outline-primary"> -->
+              <input type="text" placeholder="MM/DD/YYYY" name="datepicker" class="form-control border-secondary w-md-50">
             </li>
             <!-- 5. 填寫基本資料，完成預約後會寄送通知至電子信箱 -->
             <li class="mb-8">
