[ edit ] 修正圖片高度命名

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@ current: index
   <ul class="list-unstyled row">
     <li class="col-md-4 mb-4 mb-md-0">
       <figure class="position-relative">
-        <img src="https://images.unsplash.com/photo-1593810450967-f9c42742e326?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80" alt="整體健身" class="img img__advantage rounded-4">
+        <img src="https://images.unsplash.com/photo-1593810450967-f9c42742e326?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80" alt="整體健身" class="img magic-height-420 magic-height-md-252 magic-height-lg-420 rounded-4">
         <figcaption class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
           <h3 class="fz-large">整體健身</h3>
           <p class="">每一個動作，都融入運動解剖學的的觀點強調以身體的中心線為出發點。</p>
@@ -42,7 +42,7 @@ current: index
     </li>
     <li class="col-md-4 mb-4 mb-md-0">
       <figure class="position-relative">
-        <img src="https://images.unsplash.com/photo-1593810451137-5dc55105dace?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80" alt="減壓放鬆" class="img img__advantage rounded-4">
+        <img src="https://images.unsplash.com/photo-1593810451137-5dc55105dace?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80" alt="減壓放鬆" class="img magic-height-420 magic-height-md-252 magic-height-lg-420 rounded-4">
         <figcaption class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
           <h3 class="fz-large">減壓放鬆</h3>
           <p class="">調節全身系統、改善血液循環、減壓養心、釋放身心，達到修心養性的目的。</p>
@@ -51,7 +51,7 @@ current: index
     </li>
     <li class="col-md-4 mb-4 mb-md-0">
       <figure class="position-relative">
-        <img src="https://images.unsplash.com/photo-1599901860904-17e6ed7083a0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="局部雕塑" class="img img__advantage rounded-4">
+        <img src="https://images.unsplash.com/photo-1599901860904-17e6ed7083a0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="局部雕塑" class="img magic-height-420 magic-height-md-252 magic-height-lg-420 rounded-4">
         <figcaption class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
           <h3 class="fz-large">局部雕塑</h3>
           <p class="">幫助強化背部與腹部的核心肌群，增進我們身體穩定度以及保持良好體態。</p>
@@ -66,7 +66,7 @@ current: index
   <div class="container">
     <div class="row">
       <div class="col-md-6 d-none d-lg-block">
-        <img src="https://images.unsplash.com/photo-1540206276207-3af25c08abc4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="頂尖師資、專業教學" class="img img__teacher rounded-4">
+        <img src="https://images.unsplash.com/photo-1540206276207-3af25c08abc4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="頂尖師資、專業教學" class="img magic-height-628 rounded-4">
       </div>
       <div class="col-lg-6">
         <h2 class="fw-medium fz-x-large text-center text-lg-start mb-1">頂尖師資、專業教學</h2>
@@ -129,12 +129,12 @@ current: index
     <div class="col-md-6">
       <div class="row">
         <div class="col-6 col-md-8">
-          <img src="https://images.unsplash.com/photo-1575052814086-f385e2e2ad1b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="空間一" class="img img__space__indexPrimary rounded-4">
+          <img src="https://images.unsplash.com/photo-1575052814086-f385e2e2ad1b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="空間一" class="img magic-height-210 magic-height-md-266 magic-height-lg-444 rounded-4">
         </div>
         <div class="col-6 col-md-4">
           <div class="d-flex flex-column img__space__index">
-            <img src="https://images.unsplash.com/photo-1608235375712-be654ace4420?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80" alt="空間二" class="img img__space__indexSecondary rounded-4 mb-md-75">
-            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/photo-1552196527-9a20ba4db2c3.jpeg?raw=true" alt="空間三" class="img img__space__indexSecondary rounded-4 d-none d-md-block">
+            <img src="https://images.unsplash.com/photo-1608235375712-be654ace4420?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80" alt="空間二" class="img magic-height-210 magic-height-md-117 magic-height-lg-207 rounded-4 mb-md-75">
+            <img src="https://github.com/hexschool/webLayoutTraining1st/blob/master/yoga-week8/photo-1552196527-9a20ba4db2c3.jpeg?raw=true" alt="空間三" class="img magic-height-210 magic-height-md-117 magic-height-lg-207 rounded-4 d-none d-md-block">
           </div>
         </div>
       </div>
@@ -163,16 +163,16 @@ current: index
       <div class="col-md-6">
         <ul class="list-unstyled row flex-lg-nowrap">
           <li class="col-6 col-lg-8 mb-4 md-md-6">
-            <img src="https://images.unsplash.com/flagged/photo-1573556291531-a5d957d7e4e7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80" alt="課程一" class="img img__course__index rounded-4">
+            <img src="https://images.unsplash.com/flagged/photo-1573556291531-a5d957d7e4e7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80" alt="課程一" class="img magic-height-165 magic-height-md-150 magic-height-lg-445 rounded-4">
           </li>
           <li class="col-6 col-lg-8 mb-4 md-md-6">
-            <img src="https://images.unsplash.com/photo-1574454941059-9408c4d3f268?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="課程二" class="img img__course__index rounded-4">
+            <img src="https://images.unsplash.com/photo-1574454941059-9408c4d3f268?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="課程二" class="img magic-height-165 magic-height-md-150 magic-height-lg-445 rounded-4">
           </li>
           <li class="col-6 col-lg-8">
-            <img src="https://images.unsplash.com/photo-1611077094726-11cf1f992009?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="課程三" class="img img__course__index rounded-4">
+            <img src="https://images.unsplash.com/photo-1611077094726-11cf1f992009?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="課程三" class="img magic-height-165 magic-height-md-150 magic-height-lg-445 rounded-4">
           </li>
           <li class="col-6 col-lg-8">
-            <img src="https://images.unsplash.com/photo-1601568870191-8c417f7e0077?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1834&q=80" alt="課程四" class="img img__course__index rounded-4">
+            <img src="https://images.unsplash.com/photo-1601568870191-8c417f7e0077?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1834&q=80" alt="課程四" class="img magic-height-165 magic-height-md-150 magic-height-lg-445 rounded-4">
           </li>
         </ul>
       </div>
@@ -189,7 +189,7 @@ current: index
       <div class="card rounded-4 border-secondary">
         <div class="row g-0">
           <div class="col-md-6 col-lg-12">
-            <img src="https://images.unsplash.com/photo-1601568870191-8c417f7e0077?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1834&q=80" alt="首次體驗" class="img img__scheme__index">
+            <img src="https://images.unsplash.com/photo-1601568870191-8c417f7e0077?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1834&q=80" alt="首次體驗" class="img img__card-top img__card-start--only-md magic-height-248 magic-height-md-238 magic-height-lg-248">
           </div>
           <div class="col-md-6 col-lg-12 d-flex align-items-center">
             <div class="card-body p-6">
@@ -206,7 +206,7 @@ current: index
       <div class="card rounded-4 border-secondary">
         <div class="row g-0">
           <div class="col-md-6 col-lg-12">
-            <img src="https://images.unsplash.com/photo-1552196563-55cd4e45efb3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1826&q=80" alt="短期體驗" class="img img__scheme__index">
+            <img src="https://images.unsplash.com/photo-1552196563-55cd4e45efb3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1826&q=80" alt="短期體驗" class="img img__card-top img__card-start--only-md magic-height-248 magic-height-md-238 magic-height-lg-248">
           </div>
           <div class="col-md-6 col-lg-12 d-flex align-items-center">
             <div class="card-body p-6">
@@ -223,7 +223,7 @@ current: index
       <div class="card rounded-4 border-secondary">
         <div class="row g-0">
           <div class="col-md-6 col-lg-12">
-            <img src="https://images.unsplash.com/photo-1603988363607-e1e4a66962c6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="長期體驗" class="img img__scheme__index">
+            <img src="https://images.unsplash.com/photo-1603988363607-e1e4a66962c6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="長期體驗" class="img img__card-top img__card-start--only-md magic-height-248 magic-height-md-238 magic-height-lg-248">
           </div>
           <div class="col-md-6 col-lg-12 d-flex align-items-center">
             <div class="card-body p-6">
