--- a/app/contact.html
+++ b/app/contact.html
@@ -9,7 +9,7 @@ current: contact
  <h2 class="fw-medium fz-x-large text-peimary text-center mb-6 mb-md-8">聯絡我們</h2>
  <div class="row">
    <div class="col-lg-6 mb-10 mb-lg-0">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d920.7272139606597!2d120.3084395291871!3d22.619878499072392!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346e049b552ed759%3A0x48dde6c5e65970dc!2zODAyNTDpq5jpm4TluILoi5Ppm4XljYDmsLjnpo_ooZc06Jmf6JmfIDIg5qiT!5e0!3m2!1szh-TW!2stw!4v1629548585748!5m2!1szh-TW!2stw" width="100%" style="border:0;" allowfullscreen="" loading="lazy" class="img__map mb-6"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d920.7272139606597!2d120.3084395291871!3d22.619878499072392!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346e049b552ed759%3A0x48dde6c5e65970dc!2zODAyNTDpq5jpm4TluILoi5Ppm4XljYDmsLjnpo_ooZc06Jmf6JmfIDIg5qiT!5e0!3m2!1szh-TW!2stw!4v1629548585748!5m2!1szh-TW!2stw" width="100%" style="border:0;" allowfullscreen="" loading="lazy" class="magic-height-195 magic-height-md-323 magic-height-lg-360 mb-6"></iframe>
     <h3 class="fz-larger fw-normal mb-2">DOYOGA 教室位置</h3>
     <p class="mb-2">高雄市苓雅區北信街 23 號 2 樓</p>
     <p>如何前往：</p>
