--- a/app/reservation.html
+++ b/app/reservation.html
@@ -23,7 +23,7 @@ current: reservation
             <div class="col-md-6 col-lg-12">
               <img
                 src="https://images.unsplash.com/photo-1601568870191-8c417f7e0077?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1834&q=80"
-                alt="首次體驗" class="img img__scheme__index">
+                alt="首次體驗" class="img img__card-top img__card-start--only-md magic-height-248 magic-height-md-238 magic-height-lg-248">
             </div>
             <div class="col-md-6 col-lg-12 d-flex align-items-center">
               <div class="card-body p-6">
@@ -45,7 +45,7 @@ current: reservation
             <div class="col-md-6 col-lg-12">
               <img
                 src="https://images.unsplash.com/photo-1552196563-55cd4e45efb3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1826&q=80"
-                alt="短期體驗" class="img img__scheme__index">
+                alt="短期體驗" class="img img__card-top img__card-start--only-md magic-height-248 magic-height-md-238 magic-height-lg-248">
             </div>
             <div class="col-md-6 col-lg-12 d-flex align-items-center">
               <div class="card-body p-6">
@@ -67,7 +67,7 @@ current: reservation
             <div class="col-md-6 col-lg-12">
               <img
                 src="https://images.unsplash.com/photo-1603988363607-e1e4a66962c6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
-                alt="長期體驗" class="img img__scheme__index">
+                alt="長期體驗" class="img img__card-top img__card-start--only-md magic-height-248 magic-height-md-238 magic-height-lg-248">
             </div>
             <div class="col-md-6 col-lg-12 d-flex align-items-center">
               <div class="card-body p-6">
