--- a/app/surroundings.html
+++ b/app/surroundings.html
@@ -14,7 +14,7 @@ current: surroundings
           <figure class="position-relative">
             <img
               src="https://images.unsplash.com/photo-1616940779493-6958fbd615fe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1350&q=80"
-              alt="A、B 團體課教室" class="img img__space rounded-4">
+              alt="A、B 團體課教室" class="img magic-height-350 magic-height-md-216 magic-height-lg-350 rounded-4">
             <figcaption
               class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
               <h3 class="fz-x-large fw-medium">A、B 團體課教室</h3>
@@ -26,7 +26,7 @@ current: surroundings
           <figure class="position-relative">
             <img
               src="https://images.unsplash.com/photo-1575052814086-f385e2e2ad1b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1350&q=80"
-              alt="C、D 個人訓練室" class="img img__space rounded-4">
+              alt="C、D 個人訓練室" class="img magic-height-350 magic-height-md-216 magic-height-lg-350 rounded-4">
             <figcaption
               class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
               <h3 class="fz-x-large fw-medium">C、D 個人訓練室</h3>
@@ -38,7 +38,7 @@ current: surroundings
           <figure class="position-relative">
             <img
               src="https://images.unsplash.com/photo-1584622650111-993a426fbf0a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
-              alt="淋浴間" class="img img__space rounded-4">
+              alt="淋浴間" class="img magic-height-350 magic-height-md-216 magic-height-lg-350 rounded-4">
             <figcaption
               class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
               <h3 class="fz-x-large fw-medium">淋浴間</h3>
@@ -50,7 +50,7 @@ current: surroundings
           <figure class="position-relative">
             <img
               src="https://images.unsplash.com/photo-1600881333168-2ef49b341f30?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=668&q=80"
-              alt="器材出租" class="img img__space rounded-4">
+              alt="器材出租" class="img magic-height-350 magic-height-md-216 magic-height-lg-350 rounded-4">
             <figcaption
               class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
               <h3 class="fz-x-large fw-medium">器材出租</h3>
@@ -62,7 +62,7 @@ current: surroundings
           <figure class="position-relative">
             <img
               src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1363&q=80"
-              alt="器材出租" class="img img__space rounded-4">
+              alt="器材出租" class="img magic-height-350 magic-height-md-216 magic-height-lg-350 rounded-4">
             <figcaption
               class="text-white p-6 p-md-4 p-lg-6 pb position-absolute bottom-0 start-50 translate-middle-x w-100">
               <h3 class="fz-x-large fw-medium">交誼廳</h3>
@@ -105,27 +105,27 @@ current: surroundings
     <h2 class="fw-medium fz-x-large text-peimary text-center mb-6 mb-md-8">課程推薦</h2>
     <ul class="swiper list-unstyled row flex-nowrap">
       <li class="col-7 col-md-4 col-lg-3">
-        <img src="https://images.unsplash.com/flagged/photo-1573556291531-a5d957d7e4e7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1350&q=80" alt="基礎 Basic" class="img img__space__recommend rounded-4 mb-2">
+        <img src="https://images.unsplash.com/flagged/photo-1573556291531-a5d957d7e4e7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1350&q=80" alt="基礎 Basic" class="img magic-height-196 magic-height-md-161 magic-height-lg-196 rounded-4 mb-2">
         <h3 class="fw-medium fz-large">基礎 Basic</h3>
         <p>授課老師：Carol Tang</p>
       </li>
       <li class="col-7 col-md-4 col-lg-3">
-        <img src="https://images.unsplash.com/photo-1574454941059-9408c4d3f268?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1350&q=80" alt="基礎 Basic" class="img img__space__recommend rounded-4 mb-2">
+        <img src="https://images.unsplash.com/photo-1574454941059-9408c4d3f268?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1350&q=80" alt="基礎 Basic" class="img magic-height-196 magic-height-md-161 magic-height-lg-196 rounded-4 mb-2">
         <h3 class="fw-medium fz-large">艾揚格 Iyengar</h3>
         <p>授課老師：Kanae</p>
       </li>
       <li class="col-7 col-md-4 col-lg-3">
-        <img src="https://images.unsplash.com/photo-1611077094726-11cf1f992009?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="基礎 Basic" class="img img__space__recommend rounded-4 mb-2">
+        <img src="https://images.unsplash.com/photo-1611077094726-11cf1f992009?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="基礎 Basic" class="img magic-height-196 magic-height-md-161 magic-height-lg-196 rounded-4 mb-2">
         <h3 class="fw-medium fz-large">哈達 Hatha</h3>
         <p>授課老師：Kuzuha</p>
       </li>
       <li class="col-7 col-md-4 col-lg-3">
-        <img src="https://images.unsplash.com/photo-1601568870191-8c417f7e0077?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=668&q=80" alt="基礎 Basic" class="img img__space__recommend rounded-4 mb-2">
+        <img src="https://images.unsplash.com/photo-1601568870191-8c417f7e0077?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=668&q=80" alt="基礎 Basic" class="img magic-height-196 magic-height-md-161 magic-height-lg-196 rounded-4 mb-2">
         <h3 class="fw-medium fz-large">寰宇 Universal</h3>
         <p>授課老師：Kuzuha</p>
       </li>
       <li class="col-7 col-md-4 col-lg-3">
-        <img src="https://images.unsplash.com/photo-1573462239448-06b5cde9df64?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1318&q=80" alt="基礎 Basic" class="img img__space__recommend rounded-4 mb-2">
+        <img src="https://images.unsplash.com/photo-1573462239448-06b5cde9df64?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1318&q=80" alt="基礎 Basic" class="img magic-height-196 magic-height-md-161 magic-height-lg-196 rounded-4 mb-2">
         <h3 class="fw-medium fz-large">雙人飛行</h3>
         <p>授課老師：Kuzuha、Kanae</p>
       </li>
