--- a/course.html
+++ b/course.html
@@ -265,7 +265,7 @@
         </li>
         <li class="swiper-slide mb-18 mb-md-0 h-100">
           <div class="pb-20 position-relative">
-            <img src="../assets/images/Ellipse38.png" alt="Kuzuha" class="icon icon-huger position-absolute top-100 start-50 translate-middle">
+            <img src="https://raw.githubusercontent.com/Hsuan777/2021SlicesWeek8/gh-pages/assets/images/Ellipse38.png" alt="Kuzuha" class="icon icon-huger position-absolute top-100 start-50 translate-middle">
           </div>
           <div class="pt-14 px-6 pb-18 bg-secondary rounded-4 h-85">
             <h3 class="fw-normal fz-large text-center mb-1">Kuzuha 老師</h3>
